data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1988.wast
;; 9. **Test Description**: Implement a scenario where an imported function conditionally modifies a local variable and returns an `i32`. Within the calling module, use `br_if` based on this return value to control branching into a nested `if`. Verify stack integrity.    - **Constraint Checked**: Consistent stack handling and local scope updates when integrating conditional branching and re-entering nested structures.    - **Relation to Control Flow**: Ensures local variable modifications and control flows across boundary calls are managed seamlessly.

(assert_invalid
 (module
  (import "env" "modify_var" (func $modify_var (param i32) (result i32))) 
  (func $test (param $x i32) 
   (local $y i32) 
   (local.set $y (call $modify_var (local.get $x))) 
   (block 
    (if (result i32) 
     (then 
      (drop (br_if 0 (local.get $y))) 
      (i32.const 1)
     )
    )
   )
  )
 )
 "type mismatch"
)